--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <link rel="apple-touch-icon" href="images/pancho1024.png">
     <link rel="apple-touch-startup-image" href="images/pancho1024.png">
-    <link rel="manifest" href="manifest.json"> <!-- Agrega esta línea para vincular el manifest -->
+ <!-- Agrega esta línea para vincular el manifest -->
+    <link rel="manifest" href="/landpage/manifest.json" />
+    <script src="/landpage/main.js"></script>
     <title>Currículum de Jorge Alexis Ortega Fierro</title>
     <style>
         body {
