--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <link rel="apple-touch-icon" href="images/pancho1024.png">
     <link rel="apple-touch-startup-image" href="images/pancho1024.png">
  <!-- Agrega esta línea para vincular el manifest -->
-    <link rel="manifest" href="./manifest.json" />
-    <script src="./main.js"></script>
+    <link rel="manifest" href="/manifest.json" />
+    <script src="/main.js"></script>
     <title>Currículum de Jorge Alexis Ortega Fierro</title>
     <style>
         body {
